--- a/output/frontend.html
+++ b/output/frontend.html
@@ -6,7 +6,7 @@
     <meta name="description" content="Kursplats för kursen DV1612 JavaScript-baserade webbramverk också kallad jsramverk vid Blekinge Tekniska Högskola. Kursen handlar om JavaScript ramverk både på frontend och backend.">
     <meta name="keywords" content="JavaScript,javascript,ramverk,framework,frontend,backend,BTH,webbprogrammering">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>jsramverk.me - Projekt</title>
+    <title>jsramverk.me - NoSQL</title>
     <style>*{margin:0;padding:0;box-sizing:border-box}html{scroll-behavior:smooth;font-size:100%;font-family:sans-serif}body{font-display:auto;line-height:1.4}.header{width:100%;padding:1.4rem 1rem;background:linear-gradient(45deg, #f0db4f, #f4e57e);box-shadow:2px 2px 5px 0 rgba(0,0,0,.2);z-index:1000}.header h1{margin-bottom:0}.header a{color:#323330;text-decoration:none}.header a:hover{text-decoration:underline}.container,.inner-footer{width:100%;margin-top:2rem;padding:1.4rem 1rem;overflow:auto}::selection,::-moz-selection{background:#f0db4f}.main-title{font-size:2.4rem;margin-bottom:1.4rem}.toc{display:none}@media(min-width: 768px){.container,.inner-footer{width:740px;margin-left:auto;margin-right:auto}}@media(min-width: 992px){.container,.inner-footer{width:960px}.week-container{width:100%;margin-bottom:16rem}.week{width:auto;margin-left:350px}.main-title{font-size:4rem;margin-bottom:1.68rem}.toc{width:310px;display:block;text-align:right;position:fixed;top:14.5rem}.toc ul{list-style-type:none;font-size:1.4rem}}@media(min-width: 1200px){.container,.inner-footer{width:1160px}}/*# sourceMappingURL=inline.min.css.map */
 </style>
     <link rel="preload" href="Inter-Regular.woff2" as="font" type="font/woff2" crossorigin>
@@ -95,7 +95,7 @@
 </tr>
 </tbody>
 </table>
-<h4 id="storlek-produktionsfil(er)"><a href="#storlek-produktionsfil(er)">Storlek produktionsfil(er)</a></h4>
+<h4 id="storlek-produktionsfiler"><a href="#storlek-produktionsfiler">Storlek produktionsfil(er)</a></h4>
 <p>I nedanstående tabell listas storleken på produktionsfilerna som skapas av antingen bygg verktyget i ramverket, webpack eller uglify. Filstorlekar är utskrivna med hjälp av kommandot <code>ls -lh</code> i ett bash-skal.</p>
 <table>
 <thead>
@@ -138,7 +138,7 @@
 </section><section id="flera-exempelprogram"><h2><a href="#flera-exempelprogram">Flera exempelprogram</a></h2>
 <h4 id="realworld"><a href="#realworld">RealWorld</a></h4>
 <p>För att ytterligare utvärdera våra valda ramverk tar vi en titt i GitHub repot <a href="https://github.com/gothinkster/realworld">RealWorld Example</a>. RealWorld Example repon är både backend och frontend som uppfyller vissa specifikationer och därför kan sättas ihop villkorligt. Använd dessa repon för att skapa dig en uppfattning om hur frontend ramverken samspelar med backends.</p>
-<h4 id="john-papa's-heroes"><a href="#john-papa's-heroes">John Papa’s Heroes</a></h4>
+<h4 id="john-papas-heroes"><a href="#john-papas-heroes">John Papa’s Heroes</a></h4>
 <p>Under dotJS konferensen pratade John Papa om att välja ett frontend ramverk, videon är länkat ovan. Som förberedelse för presentationen hade han skapat samma app i “The Big Three” och de tre apparna ligger som open source kod på GitHub. <a href="https://github.com/johnpapa/heroes-angular">heroes-angular</a>, <a href="https://github.com/johnpapa/heroes-react">heroes-react</a> och <a href="https://github.com/johnpapa/heroes-vue">heroes-vue</a> är de tre repon som innehåller koden och det finns länkar till en publik driftsatt version från GitHub.</p>
 <p>Titta igenom repon och se hur John Papa har strukturerat apparna i de olika ramverken.</p>
 </section><section id="tekniska-koncept"><h2><a href="#tekniska-koncept">Tekniska koncept</a></h2>
