New examples and fixed preconnect links

--- a/examples/form/index.html
+++ b/examples/form/index.html
@@ -16,8 +16,9 @@
                 <input type="text" name="name" class="input-field" required>
             </label>
 
-            <label class="input-label">Födelsedag<br>
-                <input type="date" name="birthday" class="input-field">
+            <label class="input-label date-label">Födelsedag<br>
+                <input type="text" name="birthday" class="input-field date-field" id="date-picker">
+                <div class="date-picker"></div>
             </label>
 
             <label class="input-label">E-post<br>
@@ -30,7 +31,7 @@
 
             <label class="input-label">Ingrediens<br>
                 <select name="" id="ingredient">
-                    
+
                 </select>
             </label>
 
