added slides for week 4

--- a/slides/index.html
+++ b/slides/index.html
@@ -4,12 +4,10 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Slides index jsramverk</title>
-
-    <link rel="stylesheet" href="jsramverk.css" />
 </head>
 <body>
 
     <p><a href="ux.html">UX</a></p>
-
+    <p><a href="test.html">Test</a></p>
 </body>
 </html>
