Added slide about sources

--- a/slides/test.html
+++ b/slides/test.html
@@ -28,6 +28,18 @@
         </div>
 
         <div class="slide fade-in">
+            <h1>Kort om en källa</h1>
+            <p>Peer-reviewed journal article</p>
+            <p>Conference proceeding</p>
+            <p>Bok</p>
+            <p>Referensmanual / Dokumentation</p>
+            <p>...</p>
+            <p>...</p>
+            <p>...</p>
+            <p>Blogginlägg</p>
+        </div>
+
+        <div class="slide fade-in">
             <h1>Metod</h1>
             <p>Vi flytter fokus: <a href="https://jsramverk.me/test#skriva" target="_blank">Forskningsfråga och metod</a></p>
             <p>Skriv i samma dokument eller i ett nytt.</p>
