renamed to jsramverk.se

--- a/slides/test.html
+++ b/slides/test.html
@@ -41,7 +41,7 @@
 
         <div class="slide fade-in">
             <h1>Metod</h1>
-            <p>Vi flytter fokus: <a href="https://jsramverk.me/test#skriva" target="_blank">Forskningsfråga och metod</a></p>
+            <p>Vi flytter fokus: <a href="https://jsramverk.se/test#skriva" target="_blank">Forskningsfråga och metod</a></p>
             <p>Skriv i samma dokument eller i ett nytt.</p>
         </div>
 
@@ -73,7 +73,7 @@
 
         <div class="slide">
             <h1>Veckans upgifter</h1>
-            <p><a href="https://jsramverk.me/test" target="_blank">Test</a></p>
+            <p><a href="https://jsramverk.se/test" target="_blank">Test</a></p>
         </div>
 
         <div class="slide">
