--- a/slides/ux.html
+++ b/slides/ux.html
@@ -36,7 +36,7 @@
 
         <div class="slide">
             <h1>Veckans uppgifter</h1>
-            <p><a href="https://jsramverk.me/ux" target="_blank">UX</a></p>
+            <p><a href="https://jsramverk.se/ux" target="_blank">UX</a></p>
         </div>
 
         <div class="slide">
