--- a/old.html
+++ b/old.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>jsramverk.me</title>
+    <title>jsramverk.se</title>
     <style>*{margin:0}body,html{height:100%}html{font-size:100%;font-family:sans-serif}h1{font-size:8rem}.main-header{position:absolute;bottom:4rem;right:4rem}.container,.main{width:100%;height:100%;z-index:10;position:relative}.container{padding-bottom:32rem}.main{background-color:#f0db4f;color:#333;box-sizing:border-box;padding:6rem;box-shadow:0 10px 32px 0 rgba(0,0,0,.2);animation:pulsate-bg 30s linear infinite}@media (max-width:1000px){.main-header{font-size:4em;bottom:3rem;right:3rem}}@media (max-width:667px){.main{padding:.8rem}.main-header{font-size:3em;bottom:2rem;right:2rem}}@media (min-width:64em){html{font-size:112.5%}}</style>
     <link rel="stylesheet" href="inter-ui.css" media="none" onload="if(media!='all')media='all'">
     <link rel="stylesheet" href="style.css" media="none" onload="if(media!='all')media='all'">
@@ -28,7 +28,7 @@
                 </div>
                 <div class="footer-column">
                     <h2>GitHub</h2>
-                    <p><a href="https://github.com/dbwebb-se/ramverk2">Kursrepot</a> finns på GitHub och repot för <a href="https://github.com/emilfolino/jsramverk.me">denna webbplats</a> finns där med.</p>
+                    <p><a href="https://github.com/dbwebb-se/ramverk2">Kursrepot</a> finns på GitHub och repot för <a href="https://github.com/emilfolino/jsramverk.se">denna webbplats</a> finns där med.</p>
                 </div>
             </div>
         </footer>
