Slides for vecka 1

--- a/slides/index.html
+++ b/slides/index.html
@@ -6,8 +6,7 @@
     <title>Slides index jsramverk</title>
 </head>
 <body>
-
-    <p><a href="ux.html">UX</a></p>
-    <p><a href="test.html">Test</a></p>
+    <p><a href="vecka1.html">Vecka 1</a></p>
+    <p><a href="vecka2.html">Vecka 2</a></p>
 </body>
 </html>
