Ready for tomorrow

--- a/slides/vecka2.html
+++ b/slides/vecka2.html
@@ -19,10 +19,24 @@
         <div class="slide">
             <h1>Agenda</h1>
             <p>Ramverken</p>
+            <p>Matchmaking</p>
         </div>
 
         <div class="slide fade-in">
             <h1>Ramverken</h1>
+            <p><strong>Välj ett ramverk:</strong></p>
+            <p>Rekommenderar att välja bland: Angular, React, Svelte eller Vue</p>
+        </div>
+
+        <div class="slide fade-in">
+            <h1>Ramverken</h1>
+            <p>Låt oss titta på npgra exempel:</p>
+            <p>Tic-Tac-Toe</p>
+            <p>Me-sidor</p>
+        </div>
+
+        <div class="slide fade-in">
+            <h1>Matchmaking</h1>
         </div>
     </div>
 
