Updated slides for 2024

--- a/slides/vecka1.html
+++ b/slides/vecka1.html
@@ -12,24 +12,16 @@
 
     <div id="slide-container" class="slide-container">
         <div class="slide">
-            <h1 class="frontpage">Vecka 1</h1>
+            <h1 class="frontpage">Vecka 2</h1>
             <p>Nu är vi igång</p>
         </div>
 
         <div class="slide">
             <h1>Agenda</h1>
-            <p>Vad, hur, varför?</p>
             <p>Pair-programming</p>
             <p>GitHub Flow</p>
-            <p>Nästa vecka</p>
+            <p>Ramverk</p>
             <p>Matchmaking</p>
-        </div>
-
-        <div class="slide fade-in">
-            <h1>Vad, hur, varför?</h1>
-            <p><strong>Vad:</strong> En befintlig applikation.</p>
-            <p><strong>Hur:</strong> Tillsammans i par.</p>
-            <p><strong>Varför:</strong> Ett år kvar, lite mer på riktigt.</p>
         </div>
 
         <div class="slide">
@@ -55,7 +47,7 @@
         </div>
 
         <div class="slide">
-            <h1>Nästa vecka</h1>
+            <h1>Ramverken</h1>
 
             <div class="framework-container">
                 <img src="https://tse4.mm.bing.net/th?id=OIP.IbhLrnKBjHWsgC6jU8nNpgHaKC&pid=Api" alt="Angular" />
@@ -63,6 +55,13 @@
                 <img src="https://tse4.mm.bing.net/th?id=OIP.ziIw3PNZaDuljOr0GHyCXQAAAA&pid=Api" alt="Svelte" />
                 <img src="https://tse1.mm.bing.net/th?id=OIP.b8HASxFPkrLqZ0fJoLV_YQHaGZ&pid=Api" alt="Vue" />
             </div>
+        </div>
+
+        <div class="slide fade-in">
+            <h1>Ramverken</h1>
+            <p>Låt oss titta på npgra exempel:</p>
+            <p>Tic-Tac-Toe</p>
+            <p>Me-sidor</p>
         </div>
 
         <div class="slide">
