Added text to slide

--- a/slides/vecka1.html
+++ b/slides/vecka1.html
@@ -44,6 +44,8 @@
             <h1>GitHub Flow</h1>
 
             <p><a href="https://docs.github.com/en/get-started/quickstart/github-flow">GitHub Flow</a></p>
+
+            <p>GitHub Flow är ascoolt!</p>
         </div>
 
         <div class="slide">
